--- a/tareas/tarea1/p3.tex
+++ b/tareas/tarea1/p3.tex
@@ -8,8 +8,5 @@ Sea $\Sigma\subseteq\cL(P)$ un conjunto de cláusulas (i.e. disyunción de liter
 \end{enumerate}
 \begin{enumerate}[label=(\alph*)]
     \item Muestre que el conjunto $\Sigma=\{p\wedge q,p\vee q, \neg p\wedge\neg q\}$ tiene dos subconjuntos no redundantes equivalentes. Justifique.
-    \item Una cláusula $\varphi\in\Sigma$ es \textit{necesaria} en $\Sigma$ si pertenece a todos los subconjuntos no redundantes equivalentes de $\Sigma$. Demuestre que si una cláusula $\varphi$ es necesaria en $\Sigma$, entonces $\Sigma\setminus\{\varphi\}\not\models\varphi.$ %Demuestre que un conjunto de cláusulas $\Sigma$ tiene un único subconjunto no redundante equivalente si, y solo si, $\Sigma\equiv\Sigma_N$, donde
-    %$$\Sigma_N:=\{\varphi\in\Sigma\mid\varphi\text{ es necesaria en }\Sigma\}$$
+    \item Una cláusula $\varphi\in\Sigma$ es \textit{necesaria} en $\Sigma$ si pertenece a todos los subconjuntos no redundantes equivalentes de $\Sigma$. Demuestre que si una cláusula $\varphi$ es necesaria en $\Sigma$, entonces $\Sigma\setminus\{\varphi\}\not\models\varphi.$
 \end{enumerate}
-
-% Demuestre que existe una fórmula proposicional que no es equivalente a ninguna fórmula de Horn.
