--- a/tareas/tarea1/p3.tex
+++ b/tareas/tarea1/p3.tex
@@ -1,6 +1,6 @@
 %!TEX root = tarea1.tex
 
-Sea $\Sigma\subseteq\cL(P)$ un conjunto de cláusulas (i.e. disyunción de literales). Decimos que $\Sigma$ es \textit{redundante} si existe $\varphi\in\Sigma$ tal que $\Sigma\setminus\{\varphi\}\models\varphi$. Un conjunto $\Sigma'$ se dice un \textit{subconjunto no redundante equivalente} de $\Sigma$ si 
+Sea $\Sigma\subseteq\cL(P)$. Decimos que $\Sigma$ es \textit{redundante} si existe $\varphi\in\Sigma$ tal que $\Sigma\setminus\{\varphi\}\models\varphi$. Un conjunto $\Sigma'$ se dice un \textit{subconjunto no redundante equivalente} de $\Sigma$ si 
 \begin{enumerate}
     \item $\Sigma'\subseteq\Sigma$,
     \item $\text{models}(\Sigma')=\text{models}(\Sigma)$,
@@ -8,5 +8,6 @@ Sea $\Sigma\subseteq\cL(P)$ un conjunto de cláusulas (i.e. disyunción de liter
 \end{enumerate}
 \begin{enumerate}[label=(\alph*)]
     \item Muestre que el conjunto $\Sigma=\{p\wedge q,p\vee q, \neg p\wedge\neg q\}$ tiene dos subconjuntos no redundantes equivalentes. Justifique.
-    \item Una cláusula $\varphi\in\Sigma$ es \textit{necesaria} en $\Sigma$ si pertenece a todos los subconjuntos no redundantes equivalentes de $\Sigma$. Demuestre que si una cláusula $\varphi$ es necesaria en $\Sigma$, entonces $\Sigma\setminus\{\varphi\}\not\models\varphi.$
+    \item Una fórmula $\varphi\in\Sigma$ es \textit{necesaria} en $\Sigma$ si pertenece a todos los subconjuntos no redundantes equivalentes de $\Sigma$. Demuestre que si una fórmula $\varphi$ es necesaria en $\Sigma$, entonces $\Sigma\setminus\{\varphi\}\not\models\varphi.$
 \end{enumerate}
+
