--- a/tareas/tarea2/p1.tex
+++ b/tareas/tarea2/p1.tex
@@ -1,6 +1,6 @@
 Decimos que dos grafos $G_1 = (V_1, E_1)$ y $G_2 =
 (V_2, E_2)$\ son {\em isomorfos}, denotado por $G_1\cong G_2$, si existe una biyección $f : V_1
-\rightarrow V_2$ tal que para todo $\{a,b\}\in E_1$ se tiene que
+\rightarrow V_2$ tal que para todo $a,b\in V_1$ se tiene que
 $$\{a,b\} \in E_1\quad\text{si y solo si}\quad\{f(a), f(b)\} \in E_2$$ 
 
 Dado un par de grafos no dirigidos $G_1=(V_1,E_1)$ y $G_2=(V_2,E_2)$, construya una fórmula proposicional $\varphi_\text{iso}$ tal que 
